@@ -12832,8 +12832,6 @@ src/util/png-pix.1 svneol=native#text/plain
 src/util/png-pix.c svneol=native#text/plain
 src/util/png_info.1 svneol=native#text/plain
 src/util/png_info.c svneol=native#text/plain
-src/util/query.1 svneol=native#text/plain
-src/util/query.c svneol=native#text/plain
 src/util/random.1 svneol=native#text/plain
 src/util/random.c svneol=native#text/plain
 src/util/rle-pix.1 svneol=native#text/plain
